move all existing general purpose functionalities into this package plus unit tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = tool-shack
-version = 0.0.1
+version = 0.1.0
 author = shiyao
 author_email = sos1sos2harry@163.com
 description = "miscellaneous helper constructs used across my projects"
@@ -9,6 +9,8 @@ long_description_content_type = text/markdown
 url = ""
 classifiers = 
     Programming Langauge :: Python :: 3
+install_requires = 
+    "termcolor>=1.0.0"
 
 [options]
 package_dir = 
