add proper dependency setting in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ url = ""
 classifiers = 
     Programming Langauge :: Python :: 3
 install_requires = 
-    "termcolor>=1.0.0"
+    termcolor >=1.0.0
 
 [options]
 package_dir = 
