fix time serialize code in stage logger

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,10 @@ long_description_content_type = text/markdown
 url = ""
 classifiers = 
     Programming Langauge :: Python :: 3
+
 install_requires = 
     termcolor >=1.0.0
+    humanize >=3.11.0
 
 [options]
 package_dir = 
