add color meter

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ python_requires = >=3.6
 install_requires = 
     termcolor >=1.0.0
     humanize >=3.11.0
+    colorful
+    colour
 
 [options.packages.find]
 where = src
